--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,22 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+      - name: npm install and build webpack
+        run: |
+          npm install
+          npm run build
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
+          
+    test:
+     runs-on: ubuntu-latest
+     needs: build
+        
 
     strategy:
       matrix:
